calico/app-deployment.yml
apiVersion: v1
kind: Pod
metadata:
  name: payment
  labels:
    app: payment
spec:
  containers:
    - name: alpine
      image: alpine:latest
      command: ["sleep", "infinity"]
---
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: database
spec:
  containers:
    - name: alpine
      image: alpine:latest
      command: ["sleep", "infinity"]
---
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  containers:
    - name: alpine
      image: alpine:latest
      command: ["sleep", "infinity"]
